Fixed spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -87,7 +87,7 @@ button.navbar-toggler {
 }
 
 .grape-colour {
-  color: #57233B;
+  color: #57233b;
 }
 
 /*-- Buttons --*/
